--- a/java入门阶段/基本数据类型.md
+++ b/java入门阶段/基本数据类型.md
@@ -1,3 +1,20 @@
 
-## 基本数据类型  
-数据类型分为：基本数据类型和引用数据类型，基本数据类型分为
+## 数据类型  
+变量就是申请内存存储值，也就是说，当创建变量时，需要在内存中申请空间   
+内存管理系统根据变量的类型为变量分配存储空间，分配的空间只能用来储存改类型的数据。  
+代码：  
+int x = 1;  
+int y = 2;  
+对应的内存空间 ：  
+x → 1 ；   
+y → 2 ；  
+因此，通过定义不同的类型的变量，可以在内存中存储整数，小数或者字符。  
+
+java的两大数据类型：
+* 基本数据类型：byte，short，char，int，float，long，double，boolean
+* 引用数据类型：数组，字符串，对象等  
+下面会详细介绍下我们常用的几种基本数据类型。  
+### 基本数据类型  
+#### byte  
+* 
+
