--- a/java入门阶段/基本数据类型.md
+++ b/java入门阶段/基本数据类型.md
@@ -12,9 +12,29 @@ y → 2 ；
 
 java的两大数据类型：
 * 基本数据类型：byte，short，char，int，float，long，double，boolean
-* 引用数据类型：数组，字符串，对象等  
+* 引用数据类型：数组，字符串，对象等    
 下面会详细介绍下我们常用的几种基本数据类型。  
-### 基本数据类型  
-#### byte  
-* 
+### 基本数据类型   
+| 水果        | 价格    |  数量  |
+| --------   | -----:  | :----: |
+| 香蕉        | $1      |   5    |
+| 苹果        | $1      |   6    |
+| 草莓        | $1      |   7    |
+————————————————
+版权声明：本文为CSDN博主「空气中的臭氧」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/dqchouyang/article/details/78345742
+* 序号
+数据类型
+位数
+默认值
+取值范围
+举例说明
+1	byte(位)	8	0	 -2^7 - 2^7-1	byte b = 10;
+2	short(短整数)	16	0	-2^15 - 2^15-1	short s = 10;
+3	int(整数)	32	0	-2^31 - 2^31-1	int i = 10;
+4	long(长整数)	64	0	-2^63 - 2^63-1	long l = 10l;
+5	float(单精度)	32	0.0	-2^31 - 2^31-1	float f = 10.0f;
+6	double(双精度)	64	0.0	-2^63 - 2^63-1	double d = 10.0d;
+7	char(字符)	16	空	0 - 2^16-1	char c = 'c';
+8	boolean(布尔值)	8	false	true、false	boolean b = true;
 
