--- a/java入门阶段/基本数据类型.md
+++ b/java入门阶段/基本数据类型.md
@@ -15,14 +15,12 @@ java的两大数据类型：
 * 引用数据类型：数组，字符串，对象等    
 下面会详细介绍下我们常用的几种基本数据类型。  
 ### 基本数据类型   
-| 水果        | 价格    |  数量  |
+| 序号        | 数据类型    |  位数  |默认值|取值范围|举例说明|
 | --------   | -----:  | :----: |
 | 香蕉        | $1      |   5    |
 | 苹果        | $1      |   6    |
 | 草莓        | $1      |   7    |
-————————————————
-版权声明：本文为CSDN博主「空气中的臭氧」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/dqchouyang/article/details/78345742
+
 * 序号
 数据类型
 位数
