--- a/java入门阶段/基本数据类型.md
+++ b/java入门阶段/基本数据类型.md
@@ -15,11 +15,16 @@ java的两大数据类型：
 * 引用数据类型：数组，字符串，对象等    
 下面会详细介绍下我们常用的几种基本数据类型。  
 ### 基本数据类型   
-| 序号        | 数据类型    |  位数  |  序号        | 数据类型    |  位数  | 
+| 序号        | 数据类型    |  位数  | 默认值      | 取值范围    |  举例说明  | 
 | --------   | -----:  | :----: |  --------   | -----:  | :----: | 
-| 香蕉        | $1      |   5    |
-| 苹果        | $1      |   6    |
-| 草莓        | $1      |   7    |
+|         |      |       |        |      |       |
+|        |       |       |        |      |       |
+|        |      |       |        |      |       |
+|         |      |       |        |      |       |
+|        |       |       |        |      |       |
+|        |      |       |        |      |       |
+|         |      |       |        |      |       |
+|        |       |       |        |      |       |
 
 * 序号
 数据类型
