--- a/java入门阶段/基本数据类型.md
+++ b/java入门阶段/基本数据类型.md
@@ -17,27 +17,13 @@ java的两大数据类型：
 ### 基本数据类型   
 | 序号        | 数据类型    |  位数  | 默认值      | 取值范围    |  举例说明  | 
 | --------   | -----:  | :----: |  --------   | -----:  | :----: | 
-|         |      |       |        |      |       |
-|        |       |       |        |      |       |
-|        |      |       |        |      |       |
-|         |      |       |        |      |       |
-|        |       |       |        |      |       |
-|        |      |       |        |      |       |
-|         |      |       |        |      |       |
-|        |       |       |        |      |       |
+|   1      |  byte（位）    | 8      |   0     |   -2^7～- 2^7-1   |  byte b = 10     |
+|     2   |   short(短整数)    | 16      |  0      |  -2^15 ～ 2^15-1   |    short s = 10   |
+|      7   |   char(字符)   |   	16    |  空      |  	0 ~ 2^16-1    |   char c = 'c'    |
+|      3  |    int(整数)  |   32    |  0      | -2^31 ～ 2^31-1     |  int i = 10     |
+|      5 |    float(单精度)   |  	32     |    0.0	    |    -2^31 ~ 2^31-1  |   float f = 10.0f    |
+|      4   |    long(长整数)  |  64     |0        |  -2^63 ~ 2^63-1    |  long l = 10l     |
+|      6  |   double(双精度)   | 64      |  0.0      |   -2^63 - 2^63-1	   |   double d = 10.0d    |
+|      8  |     boolean(布尔值)  |   8    |     false   |   true、false   |     	boolean b = true  |
 
-* 序号
-数据类型
-位数
-默认值
-取值范围
-举例说明
-1	byte(位)	8	0	 -2^7 - 2^7-1	byte b = 10;
-2	short(短整数)	16	0	-2^15 - 2^15-1	short s = 10;
-3	int(整数)	32	0	-2^31 - 2^31-1	int i = 10;
-4	long(长整数)	64	0	-2^63 - 2^63-1	long l = 10l;
-5	float(单精度)	32	0.0	-2^31 - 2^31-1	float f = 10.0f;
-6	double(双精度)	64	0.0	-2^63 - 2^63-1	double d = 10.0d;
-7	char(字符)	16	空	0 - 2^16-1	char c = 'c';
-8	boolean(布尔值)	8	false	true、false	boolean b = true;
-
+		
