--- a/java入门阶段/基本数据类型.md
+++ b/java入门阶段/基本数据类型.md
@@ -17,7 +17,7 @@ java的两大数据类型：
 ### 基本数据类型   
 | 序号        |数据类型    |位数  |默认值      |取值范围    |举例说明  | 
 |  :-----:   | :-----:  |  :-----:  |  :-----:    |  :-----:  | :-----: | 
-|   1      |  byte（位）    | 8      |   0     |   -2^7～- 2^7-1   |  byte b = 10     |
+|   1      |  byte（位）    | 8      |   0     |   -2^7～ 2^7-1   |  byte b = 10     |
 |     2   |   short(短整数)    | 16      |  0      |  -2^15 ～ 2^15-1   |    short s = 10   |
 |      7   |   char(字符)   |   	16    |  空      |  	0 ~ 2^16-1    |   char c = 'c'    |
 |      3  |    int(整数)  |   32    |  0      | -2^31 ～ 2^31-1     |  int i = 10     |
